--- a/tin-projekt-wierzbicki-s9405/views/fragments/header.ejs
+++ b/tin-projekt-wierzbicki-s9405/views/fragments/header.ejs
@@ -41,5 +41,6 @@
         <li><a href="/events" class="<%= navLocation == 'event' ? 'active' : ''%>"><%= __('nav.events') %></a></li>
         <li><a href="/changeLang/pl" class="<%= lang == 'pl' ? 'active' : ''%>">PL</a></li>
         <li><a href="/changeLang/en" class="<%= lang == 'en' ? 'active' : ''%>">EN</a></li>
+        <li><a href="/changeLang/de" class="<%= lang == 'de' ? 'active' : ''%>">DE</a></li>
     </ul>
 </nav>
